WC Single: Fixed variation select alignment

--- a/sass/woocommerce/_product.scss
+++ b/sass/woocommerce/_product.scss
@@ -107,6 +107,7 @@
 
 					td {
 						padding: 0;
+						vertical-align: middle;
 					}
 
 					// Woo Variation Swatches plugin.
@@ -394,7 +395,6 @@
 		cursor: pointer;
 		font-size: 0.85em;
 		line-height: 1.2;
-		margin-bottom: 15px;
 		outline: none;
 		padding: 10px;
 		position: relative;
